feedback.txt
Your test suite did not compile!

tests/tests.cc:55:8: error: redefinition of 'accounts'
   55 |   auto accounts = atm.GetAccounts();
      |        ^
tests/tests.cc:39:8: note: previous definition is here
   39 |   auto accounts = atm.GetAccounts();
      |        ^
tests/tests.cc:63:8: error: redefinition of 'transactions'
   63 |   auto transactions = atm.GetTransactions();
      |        ^
tests/tests.cc:47:8: note: previous definition is here
   47 |   auto transactions = atm.GetTransactions();
      |        ^
tests/tests.cc:66:28: error: redefinition of 'empty'
   66 |   std::vector<std::string> empty;
      |                            ^
tests/tests.cc:50:28: note: previous definition is here
   50 |   std::vector<std::string> empty;
      |                            ^
3 errors generated.


score: 0/5
